tests/snapshots/blockflow/rich_blocks/two_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - rich-blocks
    - "100"
    - "200"
---
success: true
exit_code: 0
----- stdout -----
{
  "blocksAndEvents": [
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    []
  ]
}

----- stderr -----
